--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
     <title>vuedemo01</title>
+    <style>
+      .router-link-active{
+        color: red !important;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
